test: add comprehensive BDD/TDD testing framework
- Install Cucumber, Jest, Playwright for testing
- Create Gherkin features for bootloader, fmtX, accX
- Implement Cucumber step definitions with Playwright
- Add Jest configuration for unit and integration tests
- Create test support files (World, hooks)
- Add test scripts to package.json
- Create comprehensive test documentation

Features covered:
- Bootloader: module detection, loading, MutationObserver, performance
- fmtX: currency, dates, numbers, text formatting, dynamic content
- accX: WCAG compliance, ARIA, forms, tables, XSS protection

Test commands:
- npm test: Run all tests
- npm run test:cucumber: BDD tests
- npm run test:jest: Unit/integration tests
- npm run test:coverage: Coverage report

--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "minify:bootloader": "terser dist/bootloader.js -o dist/bootloader.min.js --compress --mangle",
     "minify:modules": "terser dist/modules/fmtx.js -o dist/modules/fmtx.min.js --compress --mangle && terser dist/modules/accx.js -o dist/modules/accx.min.js --compress --mangle",
     "dev": "python3 -m http.server 8080",
-    "test": "echo \"Tests coming soon\" && exit 0",
+    "test": "npm run test:cucumber && npm run test:jest",
+    "test:cucumber": "cucumber-js",
+    "test:jest": "jest",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:all": "npm run test:cucumber && npm run test:coverage",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "size": "npm run build && size-limit",
@@ -53,9 +60,16 @@
   },
   "homepage": "https://genx.software",
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@cucumber/cucumber": "^12.2.0",
+    "@playwright/test": "^1.56.1",
     "@size-limit/preset-small-lib": "^11.0.0",
+    "babel-jest": "^30.2.0",
     "esbuild": "^0.19.0",
     "eslint": "^8.55.0",
+    "jest": "^30.2.0",
+    "jsdom": "^27.0.1",
     "prettier": "^3.1.0",
     "size-limit": "^11.0.0",
     "terser": "^5.26.0"
